<?xml version="1.0"?>
<package format="2">
  <name>vio_tf</name>
  <version>0.0.1</version>
  <description>Static extrinsics and TF helpers for VIO / mocap alignment (imu–base_link, world–global, odom transforms).</description>

  <maintainer email="hannac4@illinois.edu">Hanna Chen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>message_filters</depend>
</package>
